--- a/css/common.css
+++ b/css/common.css
@@ -69,10 +69,15 @@ footer > section {display:flex; justify-content:space-between; max-width:1222px;
 .modalAniverse {position:fixed; z-index:999999; padding:0; width:100%; height:100%; top:0; left:0; border-radius:0; box-shadow:none; max-width:100%}
 .modalAniverse a.close-modal {top:20px; right:20px; position:fixed}
 .modalClose {position:absolute; top:20px; right:20px}
-.supportModalSt {border:4px solid #1289B9; border-radius:10px}
-#copyMail {width:100%; text-align:center; font-size:20px}
+#copyMail {width:100%; text-align:center; font-size:20px; color:#1289B9; font-weight:600}
 #copyMail:focus-visible {outline:none}
 .copyBtn {background:#1289B9; color:#fff; font-size:17px; display:inline-block; padding:6px 20px; margin-top:10px}
+
+/* 2022-11-30 */
+.supportModalSt {border:3px solid #1289B9; border-radius:10px; padding:0; max-width:480px}
+.supportModalSt > .inner {border:10px solid #F4F4F4; border-radius:10px; padding:25px 40px}
+.supportModalSt a.close-modal {background-image:url('../images/supportModalSt_close.png'); top:10px; right:10px}
+.gnbModalBtn {display:inline-block; background:#1488b9; color:#fff; padding:15px 20px; margin:5px 10px; font-family:'klavika-web', sans-seri; font-size:20px}
 
 
 @media screen and (max-width:1222px) {
